NEON-1374 NEON-1378 The app now waits until the page is ready, retrieves configuration information from a configuration JSON file, stores it in the module and then starts angular.  Moved all of the configuration information previously stored in appConfig.js to config.json and deleted appConfig.js because it is no longer necessary.

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="neonDemo">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -178,9 +178,6 @@
 
         <!-- Include the opencpu library. OpenCPU needs to be included after JQuery and before the app config. -->
         <script src="lib/opencpu/js/opencpu-0.5.js"></script>
-
-        <!-- Configure our main demo application -->
-        <script src="js/appConfig.js"></script>
 
         <!-- In production use:
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
