Changes to make it work full screen

--- a/app/index.html
+++ b/app/index.html
@@ -148,7 +148,8 @@
         </div>
 
         <!-- DASHBOARD CONTENT -->
-        <div class="container">
+        <!-- <div class="container"> -->
+        <div>
 
             <!-- Use gridster to manage visualization layouts. -->
             <div gridster="gridsterOpts" id="gridster-div">
