NEON-1381 Created the DatasetService for storing information about the active dataset.  Visualizations now receive references to the DatasetService and use that service to retrieve the active dataset information instead of relying on the content of onDatasetChanged messages.

--- a/app/index.html
+++ b/app/index.html
@@ -220,6 +220,7 @@
         <!-- Include our custom Angular components here for now. -->
         <script src="js/app.js"></script>
         <script src="js/connectionService.js"></script>
+        <script src="js/datasetService.js"></script>
         <script src="js/errorNotificationService.js"></script>
         <script src="js/filterCountService.js"></script>
         <script src="js/neonDemoController.js"></script>
