NEON-1388 Added a chart options button to all visualizations that did not previously have one.  Added a table selection dropdown in the chart options for all visualizations.  Added a table selection dropdown to the main container for the filter builder and view data table available through the navbar.  Minor formatting and styling changes.

--- a/app/queryResultsTableWidget.html
+++ b/app/queryResultsTableWidget.html
@@ -33,7 +33,7 @@
     <body ng-controller="neonDemoController">
 
         <!-- See Data tray -->
-        <div query-results-table show-data="(true)"></div>
+        <div query-results-table show-data="(true)" navbar-item="(false)"></div>
 
         <!-- In production use:
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
