--- a/app/index.html
+++ b/app/index.html
@@ -99,7 +99,7 @@
 
             <div id="data-tray" class="tray data-tray panel panel-default collapse">
                 <div class="container panel-body">
-                    <div query-results-table show-data="seeData"></div>
+                    <div query-results-table show-data="seeData" navbar-item="(true)"></div>
                 </div>
             </div>
 
