Updating a link for one of the Tangelo Mentions support modules

--- a/app/index.html
+++ b/app/index.html
@@ -231,7 +231,9 @@
 
         <!-- Include Tangelo Mentions files -->
         <script src="js/vendor/vega/vega-1.3.3.min.js"></script>
-        <script src="http://localhost:8082/plugin/ui/controlPanel.js"></script>
+        <!-- This following link assumes Neon and Tangelo are proxied to be at the same host. 
+             Add the server location:port if necessary.  It's a reference to a Tangelo plugin -->
+        <script src="/plugin/ui/controlPanel.js"></script>
         <script src="js/vendor/tangelo-mentions/data.js"></script>
         <script src="js/vendor/tangelo-mentions/history.js"></script>
         <script src="js/vendor/tangelo-mentions/twitter.js"></script>
