NEON-1392 Users can now specify multiple layouts in config.json.  Each layout is labeled with a unique name.  Each dataset may specify the name of a layout to use when it is selected.  Datasets without a specified layout will use the default layout if it exists.  The neonDemoController no longer creates a default layout on page load.  The databaseConfig now has access to the gridster visualization array and resets it using the layout configuration when a dataset is selected.

--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
                     <div class="clearfix visible-xs"></div>
 
                     <!-- Database Config -->
-                    <database-config></database-config>
+                    <database-config gridster-configs="visualizations"></database-config>
 
                     <!-- Add visualization control -->
                     <div add-visualization gridster-configs="visualizations"></div>
