--- a/app/dataSelectorWidget.html
+++ b/app/dataSelectorWidget.html
@@ -29,7 +29,7 @@
     <body ng-controller="neonDemoController">
 
         <!-- Database Config -->
-        <database-config></database-config>
+        <database-config gridster-configs="visualizations"></database-config>
 
         <!-- In production use:
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
