--- a/app/index.html
+++ b/app/index.html
@@ -21,20 +21,21 @@
 
         <!-- Directive styles -->
         <link rel="stylesheet" type="text/css" href="css/directives/addVisualization.css">
-        <link rel="stylesheet" type="text/css" href="css/directives/circularHeatForm.css">
-        <link rel="stylesheet" type="text/css" href="css/directives/circularHeatChart.css">
-        <link rel="stylesheet" type="text/css" href="css/directives/countBy.css">
         <link rel="stylesheet" type="text/css" href="css/directives/barchart.css">
+        <link rel="stylesheet" type="text/css" href="css/directives/circularHeatChart.css">
+        <link rel="stylesheet" type="text/css" href="css/directives/circularHeatForm.css">
+        <link rel="stylesheet" type="text/css" href="css/directives/countBy.css">
+        <link rel="stylesheet" type="text/css" href="css/directives/filterState.css">
+        <link rel="stylesheet" type="text/css" href="css/directives/heatMap.css">
         <link rel="stylesheet" type="text/css" href="css/directives/linechart.css">
+        <link rel="stylesheet" type="text/css" href="css/directives/queryResultsTable.css">
         <link rel="stylesheet" type="text/css" href="css/directives/stackedBarChart.css">
+        <link rel="stylesheet" type="text/css" href="css/directives/sunburst.css">
+        <link rel="stylesheet" type="text/css" href="css/directives/tagCloud.css">
         <link rel="stylesheet" type="text/css" href="css/directives/timelineSelector.css">
         <link rel="stylesheet" type="text/css" href="css/directives/timelineSelectorChart.css">
-        <link rel="stylesheet" type="text/css" href="css/directives/heatMap.css">
-        <link rel="stylesheet" type="text/css" href="css/directives/queryResultsTable.css">
-        <link rel="stylesheet" type="text/css" href="css/directives/tagCloud.css">
         <link rel="stylesheet" type="text/css" href="css/directives/visualizationWidget.css">
 
-        <link rel="stylesheet" type="text/css" href="css/directives/sunburst.css">
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -236,6 +237,7 @@
         <script src="js/directives/countBy.js"></script>
         <script src="js/directives/databaseConfig.js"></script>
         <script src="js/directives/filterBuilder.js"></script>
+        <script src="js/directives/filterState.js"></script>
         <script src="js/directives/fieldSelector.js"></script>
         <script src="js/directives/heatMap.js"></script>
         <script src="js/directives/linechart.js"></script>
