NEON-1442 Replacing the DIG configuration variable with an external application configuration variable that contains the DIG configuration information.  Replaced DIG links in Count By and Data Table with popups containing lists of links to available external applications.  Created the PopupService for utility methods to create HTML elements for the link popups (since I was unable to successfully inject angular directives into SlickGrid rows).

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
         <!-- Custom Stylesheets -->
         <link href="css/style.css" rel="stylesheet">
         <link href="css/errorStyle.css" rel="stylesheet">
+        <link href="css/popupStyle.css" rel="stylesheet">
 
         <!-- Directive styles -->
         <link rel="stylesheet" type="text/css" href="css/directives/addVisualization.css">
@@ -227,6 +228,7 @@
         <script src="js/filterService.js"></script>
         <script src="js/filterCountService.js"></script>
         <script src="js/neonDemoController.js"></script>
+        <script src="js/popupService.js"></script>
 
         <script src="js/charts/circularHeatChart.js"></script>
 
