--- a/app/index.html
+++ b/app/index.html
@@ -178,7 +178,7 @@
         <script src="lib/jquery/js/jquery.min.js"></script>
 
         <!-- Include the opencpu library. OpenCPU needs to be included after JQuery and before the app config. -->
-        <script src="lib/opencpu/js/opencpu-0.5.js"></script>
+        <script src="js/vendor/opencpu-0.5.js"></script>
 
         <!-- In production use:
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
