NEON-1442 The links popup used by Count By and Data Table is now an angular directive.  This also fixed a bug with the links popup not rendering at the correct z-index.  Deleted the PopupService because it is no longer needed.

--- a/app/index.html
+++ b/app/index.html
@@ -228,7 +228,6 @@
         <script src="js/filterService.js"></script>
         <script src="js/filterCountService.js"></script>
         <script src="js/neonDemoController.js"></script>
-        <script src="js/popupService.js"></script>
 
         <script src="js/charts/circularHeatChart.js"></script>
 
@@ -242,6 +241,7 @@
         <script src="js/directives/filterBuilder.js"></script>
         <script src="js/directives/heatMap.js"></script>
         <script src="js/directives/linechart.js"></script>
+        <script src="js/directives/linksPopup.js"></script>
         <script src="js/directives/poweredByNeon.js"></script>
         <script src="js/directives/queryResultsTable.js"></script>
         <script src="js/directives/stackedBarchart.js"></script>
