--- a/app/index.html
+++ b/app/index.html
@@ -170,6 +170,8 @@
         <!-- Include the xdata logging package. -->
         <script src="lib/xdatalogger/js/draper.activity_logger-2.1.1.js"></script>
         <script src="lib/xdatalogger/js/draper.activity_worker-2.1.1.js"></script>
+        <script src="lib/user-ale/js/userale.js"></script>
+        <script src="lib/user-ale/js/userale-worker.js"></script>
 
         <!-- Including neon before angular here as neon has lodash and jquery wrapped into it.  If this is
              loaded first, angular should pick up the included jQuery. -->
