Restoring original directed graph directive and template, and renaming new ones as 'directedGraphV2'

--- a/app/index.html
+++ b/app/index.html
@@ -237,6 +237,7 @@
         <script src="js/directives/countBy.js"></script>
         <script src="js/directives/databaseConfig.js"></script>
         <script src="js/directives/directedGraph.js"></script>
+        <script src="js/directives/directedGraphV2.js"></script>
         <script src="js/directives/filterBuilder.js"></script>
         <script src="js/directives/filterState.js"></script>
         <script src="js/directives/heatMap.js"></script>
