NEON-1458 Added a tag field selection dropdown in the options for the Tag Cloud.  Also removed the tag bindings for the Tag Cloud because the new changes make them even more outdated.

--- a/app/tagCloudWidget.html
+++ b/app/tagCloudWidget.html
@@ -33,7 +33,7 @@
 
         <!-- Tag cloud -->
         <div class="well visualization-widget">
-            <div tag-cloud tag-field="'hashtags'"></div>
+            <div tag-cloud></div>
         </div>
 
         <!-- In production use:
