--- a/app/index.html
+++ b/app/index.html
@@ -169,7 +169,7 @@
 
         <!-- Include the xdata logging package. -->
         <script src="lib/xdatalogger/js/draper.activity_logger-2.1.1.js"></script>
-        <script src="lib/xdatalogger/js/draper.activity_worker-2.1.1.js"></script>
+        <!-- <script src="lib/xdatalogger/js/draper.activity_worker-2.1.1.js"></script> -->
         <script src="lib/user-ale/js/userale.js"></script>
         <script src="lib/user-ale/js/userale-worker.js"></script>
 
