--- a/app/index.html
+++ b/app/index.html
@@ -229,6 +229,7 @@
         <script src="js/errorNotificationService.js"></script>
         <script src="js/filterService.js"></script>
         <script src="js/filterCountService.js"></script>
+        <script src="js/utilityService.js"></script>
         <script src="js/neonDemoController.js"></script>
 
         <script src="js/charts/circularHeatChart.js"></script>
