--- a/app/filterBuilderWidget.html
+++ b/app/filterBuilderWidget.html
@@ -17,6 +17,7 @@
         <link href="css/style.css" rel="stylesheet">
 
         <!-- Directive styles -->
+        <link href="css/filterBuilder.css" rel="stylesheet">
 
         <!-- Special widget styles -->
         <link rel="stylesheet" type="text/css" href="css/widgetStyle.css">
@@ -31,7 +32,7 @@
     <body ng-controller="neonDemoController">
 
         <!-- Filter Builder tray -->
-        <div filter-builder></div>
+        <div filter-builder navbar-item="(false)"></div>
 
         <!-- In production use:
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
