--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
         <script src="lib/respond.min.js"></script>
         <![endif]-->
     </head>
-    <body ng-controller="neonDemoController">
+    <body class="ng-hide" ng-controller="neonDemoController" ng-show="displayDashboard">
 
         <!-- Header -->
         <!-- This could be made into either a directive or a partial -->
@@ -59,12 +59,12 @@
                     <div class="clearfix visible-xs"></div>
 
                     <!-- Database Config -->
-                    <database-config gridster-configs="visualizations"></database-config>
+                    <database-config gridster-configs="visualizations" ng-hide="hideNavbarItems"></database-config>
 
                     <!-- Add visualization control -->
-                    <div add-visualization gridster-configs="visualizations"></div>
+                    <div add-visualization gridster-configs="visualizations" ng-hide="hideNavbarItems"></div>
 
-                    <ul class="nav navbar-nav">
+                    <ul class="nav navbar-nav" ng-hide="hideNavbarItems">
                         <li>
                             <a data-toggle="collapse" data-parent="#trays" href=".filter-tray" class="collapsed"
                                 ng-click="toggleCreateFilters()">
@@ -90,7 +90,7 @@
         </nav>
 
         <!-- Trays -->
-        <div class="panel-group" id="trays">
+        <div class="panel-group" id="trays" ng-hide="hideNavbarItems">
 
             <!-- Filter Builder tray -->
             <div class="tray-mirror filter-tray collapse">
