--- a/app/index.html
+++ b/app/index.html
@@ -245,6 +245,7 @@
         <script src="js/directives/heatMap.js"></script>
         <script src="js/directives/linechart.js"></script>
         <script src="js/directives/linksPopup.js"></script>
+        <script src="js/directives/optionsMenu.js"></script>
         <script src="js/directives/poweredByNeon.js"></script>
         <script src="js/directives/queryResultsTable.js"></script>
         <script src="js/directives/stackedBarchart.js"></script>
