Removed the FilterCountService and replaced it with a bound variable that is passed from the Neon Demo Controller to the Filter Builder.  Now adding filters to a Filter Builder visualization no longer updates the filter count displayed for the Create Filters navbar item.

--- a/app/index.html
+++ b/app/index.html
@@ -99,7 +99,7 @@
 
             <div id="filter-tray" class="tray filter-tray panel panel-default collapse">
                 <div class="container panel-body">
-                    <div filter-builder navbar-item="(true)"></div>
+                    <div filter-builder navbar-item="(true)" filter-count="filterCount"></div>
                 </div>
             </div>
 
@@ -237,7 +237,6 @@
         <script src="js/datasetService.js"></script>
         <script src="js/errorNotificationService.js"></script>
         <script src="js/filterService.js"></script>
-        <script src="js/filterCountService.js"></script>
         <script src="js/neonDemoController.js"></script>
 
         <script src="js/charts/circularHeatChart.js"></script>
