NEON-1482:  Starting to break apart the map and rework the logic of the map directive to manage the layers per table in a dataset.

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
         <link rel="stylesheet" type="text/css" href="css/directives/heatMap.css">
         <link rel="stylesheet" type="text/css" href="css/directives/directedGraph.css">
         <link rel="stylesheet" type="text/css" href="css/directives/linechart.css">
+        <link rel="stylesheet" type="text/css" href="css/directives/map.css">
         <link rel="stylesheet" type="text/css" href="css/directives/queryResultsTable.css">
         <link rel="stylesheet" type="text/css" href="css/directives/stackedBarChart.css">
         <link rel="stylesheet" type="text/css" href="css/directives/sunburst.css">
@@ -227,7 +228,8 @@
         <script src="js/charts/directedGraph.js"></script>
         <script src="js/charts/linechart.js"></script>
         <script src="js/charts/timelineSelectorChart.js"></script>
-        <script src="js/coremap/coremap.js"></script>
+        <script src="js/coremap/coremap2.js"></script>
+        <script src="js/coremap/pointsLayer.js"></script>
         <script src="js/tables/table.js"></script>
         <script src="js/charts/sunburst.js"></script>
 
@@ -253,6 +255,7 @@
         <script src="js/directives/heatMap.js"></script>
         <script src="js/directives/linechart.js"></script>
         <script src="js/directives/linksPopup.js"></script>
+        <script src="js/directives/map.js"></script>
         <script src="js/directives/optionsMenu.js"></script>
         <script src="js/directives/poweredByNeon.js"></script>
         <script src="js/directives/queryResultsTable.js"></script>
