NEON-1482:  Pulling the heatlayer logic into a custom layer object and stubbing out some of the new resize and control handlers.

--- a/app/index.html
+++ b/app/index.html
@@ -229,6 +229,7 @@
         <script src="js/charts/linechart.js"></script>
         <script src="js/charts/timelineSelectorChart.js"></script>
         <script src="js/coremap/coremap2.js"></script>
+        <script src="js/coremap/heatmapLayer.js"></script>
         <script src="js/coremap/pointsLayer.js"></script>
         <script src="js/tables/table.js"></script>
         <script src="js/charts/sunburst.js"></script>
