--- a/app/index.html
+++ b/app/index.html
@@ -227,7 +227,7 @@
         <script src="js/charts/directedGraph.js"></script>
         <script src="js/charts/linechart.js"></script>
         <script src="js/charts/timelineSelectorChart.js"></script>
-        <script src="js/coremap/coremap2.js"></script>
+        <script src="js/coremap/coremap.js"></script>
         <script src="js/coremap/heatmapLayer.js"></script>
         <script src="js/coremap/pointsLayer.js"></script>
         <script src="js/tables/table.js"></script>
