Updating the version of heatmapjs used by the map visualization and pulling the old openlayer-heatmap layer from version 1 of heatmapjs into the vendor folder.  This has been updated to work with the heatmapjs 2.0 API.  Only a basic migration was done.  Further clean-up or optimization can be done later.

--- a/app/index.html
+++ b/app/index.html
@@ -192,8 +192,8 @@
         <script src="lib/d3/js/d3.min.js"></script>
 
         <script src="lib/openlayers/OpenLayers.js"></script>
-        <script src="lib/openlayers-heatmap/js/heatmap.js"></script>
-        <script src="lib/openlayers-heatmap/js/heatmap-openlayers.js"></script>
+        <script src="lib/heatmapjs/js/heatmap.min.js"></script>
+        <script src="js/vendor/openlayers-heatmapjs/heatmap-openlayers.js"></script>
         <script src="lib/jquery.tagcloud/js/jquery.tagcloud.js"></script>
         <script src="lib/threedubmedia.jquery.event/js/jquery.event.drag.js"></script>
         <script src="lib/threedubmedia.jquery.event/js/jquery.event.drop.js"></script>
