Adding gantt chart with basic functionality

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
         <link rel="stylesheet" type="text/css" href="lib/jquery-ui/themes/ui-lightness/jquery.ui.theme.css">
         <link rel="stylesheet" type="text/css" href="js/vendor/slick-grid/css/slick.grid.css">
         <link rel="stylesheet" type="text/css" href="lib/angular-gridster/css/angular-gridster.min.css">
+        <link rel="stylesheet" type="text/css" href="lib/angular-gantt/css/angular-gantt.min.css">
+        <link rel="stylesheet" type="text/css" href="lib/angular-gantt/css/angular-gantt-plugins.min.css">
 
         <link rel="stylesheet" type="text/css" href="css/app.css">
 
@@ -186,6 +188,10 @@
         -->
         <script src="lib/angular/js/angular.min.js"></script>
         <script src="lib/angular-gridster/js/angular-gridster.min.js"></script>
+        <script src="lib/moment/js/moment.min.js"></script>
+        <script src="lib/angular-moment/js/angular-moment.min.js"></script>
+        <script src="lib/angular-gantt/js/angular-gantt.min.js"></script>
+        <script src="lib/angular-gantt/js/angular-gantt-tooltips-plugin.min.js"></script>
         <script src="lib/javascript-detect-element-resize/js/jquery.resize.js"></script>
 
         <!-- Include third party libs -->
@@ -241,6 +247,7 @@
         <script src="js/directives/directedGraph.js"></script>
         <script src="js/directives/filterBuilder.js"></script>
         <script src="js/directives/filterState.js"></script>
+        <script src="js/directives/gantt-chart.js"></script>
         <script src="js/directives/linechart.js"></script>
         <script src="js/directives/linksPopup.js"></script>
         <script src="js/directives/map.js"></script>
