Adding configs and cleaning up gantt chart

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" type="text/css" href="lib/angular-gridster/css/angular-gridster.min.css">
         <link rel="stylesheet" type="text/css" href="lib/angular-gantt/css/angular-gantt.min.css">
         <link rel="stylesheet" type="text/css" href="lib/angular-gantt/css/angular-gantt-plugins.min.css">
+        <link rel="stylesheet" type="text/css" href="lib/angular-ui-tree/css/angular-ui-tree.min.css">
 
         <link rel="stylesheet" type="text/css" href="css/app.css">
 
@@ -191,7 +192,8 @@
         <script src="lib/moment/js/moment.min.js"></script>
         <script src="lib/angular-moment/js/angular-moment.min.js"></script>
         <script src="lib/angular-gantt/js/angular-gantt.min.js"></script>
-        <script src="lib/angular-gantt/js/angular-gantt-tooltips-plugin.min.js"></script>
+        <script src="lib/angular-gantt/js/angular-gantt-plugins.min.js"></script>
+        <script src="lib/angular-ui-tree/js/angular-ui-tree.min.js"></script>
         <script src="lib/javascript-detect-element-resize/js/jquery.resize.js"></script>
 
         <!-- Include third party libs -->
