--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 
         <!-- Header -->
         <!-- This could be made into either a directive or a partial -->
-        <nav role="navigation" class="navbar">
+        <nav role="navigation" class="navbar" ng-hide="hideNavbarItems">
             <div class="navbar-default navbar-static-top" data-spy="{true: '', false: 'affix'}[hideNavbarItems]">
                 <div class="container">
 
@@ -49,106 +49,10 @@
 
                     <!-- Add visualization control -->
                     <div add-visualization gridster-configs="visualizations" ng-hide="hideNavbarItems"></div>
-
-                    <!--
-                    <ul class="nav navbar-nav" ng-hide="hideNavbarItems">
-                        <li>
-                            <a data-toggle="collapse" data-parent="#trays" href=".filter-tray" class="collapsed"
-                                ng-click="toggleCreateFilters()">
-                                <span class="glyphicon glyphicon-filter"></span>
-                                Create Filters
-                                <span class="label label-primary" ng-bind="filterCount" ng-class="{true: '', false: 'hidden'}[filterCount > 0]"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a data-toggle="collapse" data-parent="#trays" href=".data-tray" class="collapsed"
-                               ng-click="toggleSeeData()">
-                                <span class="glyphicon glyphicon-list"></span> View Data
-                            </a>
-                        </li>
-                        -->
-                        <!-- <li>
-                            <a data-toggle="collapse" data-parent="#trays" href=".query-tray" class="collapsed">
-                                <span class="glyphicon glyphicon-pencil"></span> Write Query
-                            </a>
-                        </li> -->
                     </ul>
                 </div>
             </div>
         </nav>
-
-        <!-- Trays -->
-        <div class="panel-group" id="trays" ng-hide="hideNavbarItems">
-
-            <!-- Filter Builder tray -->
-            <!--
-            <div class="tray-mirror filter-tray collapse">
-                <div class="inner" style="height: 134px"></div>
-            </div>
-
-            <div id="filter-tray" class="tray filter-tray panel panel-default collapse">
-                <div class="container panel-body">
-                    <div filter-builder navbar-item="(true)" filter-count="filterCount"></div>
-                </div>
-            </div>
-            -->
-
-            <!-- See Data tray -->
-            <!--
-            <div class="tray-mirror data-tray collapse">
-                <div class="inner" style="height: 394px"></div>
-            </div>
-
-            <div id="data-tray" class="tray data-tray panel panel-default collapse">
-                <div class="container panel-body">
-                    <div query-results-table show-data="seeData" navbar-item="(true)"></div>
-                </div>
-            </div>
-            -->
-
-            <!-- Query Builder tray -->
-            <!-- <div>
-
-                <div class="tray-mirror query-tray collapse">
-                  <div class="inner" style="height: 223px"></div>
-                </div>
-                <div id="query-tray" class="tray query-tray panel panel-default collapse">
-
-                  <div class="container panel-body">
-
-                    <a class="pull-right" data-toggle="modal" href="#queryHelpModal">Help <span class="glyphicon glyphicon-question-sign"></span></a>
-
-                    <h4>Write your own query</h4>
-
-                    <textarea class="form-control" rows="5"></textarea>
-
-                    <button type="button" class="btn btn-primary pull-right">
-                      Run Query
-                    </button>
-
-                  </div>
-                </div>
-
-                <div class="modal fade" id="queryHelpModal" tabindex="-1" role="dialog" aria-labelledby="queryHelpModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                <h4 class="modal-title" id="queryHelpModalLabel">Custom Query Instructions</h4>
-                            </div>
-                            <div class="modal-body">
-                                Helpful info here.
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div> -->
-
-        </div>
 
         <!-- DASHBOARD CONTENT -->
         <div class="container">
