NEON-1549 Added a button to the Timeline to allow the user to select start and end dates for the filter from two calendars.  Uses the angular-bootstrap-datetimepicker library.  The dates in the calendars reflect the Timeline's header, brush, and filter.

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" type="text/css" href="lib/jquery-ui/themes/ui-lightness/jquery.ui.theme.css">
         <link rel="stylesheet" type="text/css" href="js/vendor/slick-grid/css/slick.grid.css">
         <link rel="stylesheet" type="text/css" href="lib/angular-gridster/css/angular-gridster.min.css">
+        <link rel="stylesheet" type="text/css" href="lib/angular-bootstrap-datetimepicker/css/datetimepicker.css">
 
         <link rel="stylesheet" type="text/css" href="css/app.css">
 
@@ -208,6 +209,10 @@
         <script src="lib/mergesort/js/merge-sort.js"></script>
         <script src="lib/bootstrap/js/bootstrap.min.js"></script>
         <script src="lib/remarkable-bootstrap-notify/js/bootstrap-notify.min.js"></script>
+
+        <!-- Moment required for angular-bootstrap-datetimepicker -->
+        <script src="lib/moment/js/moment.min.js"></script>
+        <script src="lib/angular-bootstrap-datetimepicker/js/datetimepicker.js"></script>
 
         <!-- Include required non-angular support modules -->
         <script src="js/neon-extensions/filtertable.js"></script>
