--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,23 @@
     </head>
     <body class="ng-hide" ng-controller="neonDemoController" ng-show="displayDashboard">
 
+        <!-- Help Video Modal -->
+        <div class="modal fade neon-popup" id="videoModal" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title">Neon Dashboard Demo Video</h4>
+                    </div>
+                    <div class="modal-body">
+                        <video id="helpVideo" ng-src="{{help.video}}" controls>
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Header -->
         <!-- This could be made into either a directive or a partial -->
         <nav role="navigation" class="navbar">
@@ -38,6 +55,21 @@
                     </div>
 
                     <div powered-by-neon class="pull-right"></div>
+
+                    <!-- Help Button -->
+                    <div class="dropdown pull-right" ng-show="(help.guide || help.video)">
+                        <a class="dropdown-toggle navbar-text" data-toggle="dropdown" href="#" role="button">
+                            <img class="brand-image" src="img/Help_34x34.png" style="margin-right: 5px;"></img>Help<span class="caret" style="margin-left: 5px;"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li ng-show="(help.guide)"><a href="{{help.guide}}" target="guide">
+                                User Guide
+                            </a></li>
+                            <li ng-show="(help.video)"><a href="#" data-toggle="modal" data-target="#videoModal">
+                                Demo Video
+                            </a></li>
+                        </ul>
+                    </div>
 
                     <div class="clearfix visible-xs"></div>
 
