--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
         <!-- Header -->
         <!-- This could be made into either a directive or a partial -->
         <nav role="navigation" class="navbar">
-            <div class="navbar-default navbar-static-top" ng-class="{true: '', false: 'affix'}[hideNavbarItems == true]">
+            <div class="navbar-default navbar-fixed-top" ng-class="{true: '', false: 'affix'}[hideNavbarItems == true]">
                 <div class="container" ng-hide="hideNavbarItems">
                     <div class="pull-left" ng-show="hideNavbarItems">
                         <span class="navbar-text navbar-title-text">
