Added basic import functionality - has ability to add and drop databases (drop only after directly adding, not in different sessions), and prompts for user input on data types.

--- a/app/index.html
+++ b/app/index.html
@@ -37,12 +37,14 @@
                         </span>
                     </div>
 
-                    <options-menu parent-element="element" class="navbar-text pull-right" ng-show="!(hideAdvancedOptions)">
+                    <options-menu parent-element="element" id= "navbar-option-menu" class="navbar-text pull-right navbar-option-menu" ng-show="!(hideAdvancedOptions)">
                         <!-- Buttons to select file format -->
                         <label>Export Format</label>
                         <div file-formats gridster-configs="visualizations" ng-hide="hideNavbarItems"></div>
                         <!-- Export option -->
                         <div export-widgets gridster-configs="visualizations" ng-hide="hideNavbarItems"></div>
+                        <!-- Import option -->
+                        <div import-file gridster-configs="visualizations" ng-hide="hideNavbarItems"></div>
                     </options-menu>
 
                     <div powered-by-neon class="pull-right"></div>
@@ -253,6 +255,7 @@
         <script src="js/directives/fileFormats.js"></script>
         <script src="js/directives/filterBuilder.js"></script>
         <script src="js/directives/filterState.js"></script>
+        <script src="js/directives/importFile.js"></script>
         <script src="js/directives/linechart.js"></script>
         <script src="js/directives/linksPopup.js"></script>
         <script src="js/directives/map.js"></script>
