--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
                         <div export-widgets gridster-configs="visualizations" ng-hide="hideNavbarItems"></div>
                         <!-- Import option -->
                         <div import-file gridster-configs="visualizations" ng-hide="hideNavbarItems"></div>
+                        <div drop-data gridster-configs="visualizations" ng-hide="hideNavbarItems"></div>
                     </options-menu>
 
                     <div powered-by-neon class="pull-right"></div>
@@ -283,6 +284,7 @@
         <script src="js/errorNotificationService.js"></script>
         <script src="js/filterService.js"></script>
         <script src="js/exportService.js"></script>
+        <script src="js/importService.js"></script>
         <script src="js/neonDemoController.js"></script>
 
         <script src="js/charts/circularHeatChart.js"></script>
@@ -294,6 +296,7 @@
         <script src="js/directives/countBy.js"></script>
         <script src="js/directives/databaseConfig.js"></script>
         <script src="js/directives/directedGraph.js"></script>
+        <script src="js/directives/dropData.js"></script>
         <script src="js/directives/exportWidgets.js"></script>
         <script src="js/directives/fileFormats.js"></script>
         <script src="js/directives/filterBuilder.js"></script>
