NEON-1535 Add functionality in map to color points by date with gradient

--- a/app/index.html
+++ b/app/index.html
@@ -160,6 +160,7 @@
         <script src="lib/bootstrap/js/bootstrap.min.js"></script>
         <script src="lib/ngDraggable/js/ngDraggable.js"></script>
         <script src="lib/remarkable-bootstrap-notify/js/bootstrap-notify.min.js"></script>
+        <script src="lib/rainbowvis.js/js/rainbowvis.js"></script>
 
         <!-- Moment required for angular-bootstrap-datetimepicker -->
         <script src="lib/moment/js/moment.min.js"></script>
