NEON-1535 Add functionality in map to color points by date with gradient

--- a/app/index.html
+++ b/app/index.html
@@ -159,6 +159,7 @@
         <script src="lib/mergesort/js/merge-sort.js"></script>
         <script src="lib/bootstrap/js/bootstrap.min.js"></script>
         <script src="lib/remarkable-bootstrap-notify/js/bootstrap-notify.min.js"></script>
+        <script src="lib/rainbowvis.js/js/rainbowvis.js"></script>
 
         <!-- Moment required for angular-bootstrap-datetimepicker -->
         <script src="lib/moment/js/moment.min.js"></script>
