NEON-1645 Created the Parameter Service to read URL parameters and add them as filters to the dashboard.

--- a/app/index.html
+++ b/app/index.html
@@ -186,8 +186,9 @@
         <script src="js/connectionService.js"></script>
         <script src="js/datasetService.js"></script>
         <script src="js/errorNotificationService.js"></script>
-        <script src="js/filterService.js"></script>
         <script src="js/exportService.js"></script>
+        <script src="js/filterService.js"></script>
+        <script src="js/parameterService.js"></script>
         <script src="js/neonDemoController.js"></script>
 
         <script src="js/charts/circularHeatChart.js"></script>
