Made changes based on code review. Better documentation, moved some things from javascript to use angular html, and some other small changes.

--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
                         <div export-widgets gridster-configs="visualizations" ng-hide="hideNavbarItems"></div>
                         <!-- Import option -->
                         <div import-file gridster-configs="visualizations" ng-hide="hideNavbarItems"></div>
-                        <div drop-data gridster-configs="visualizations" ng-hide="hideNavbarItems"></div>
+                        <div remove-dataset gridster-configs="visualizations" ng-hide="hideNavbarItems"></div>
                     </options-menu>
 
                     <div powered-by-neon class="pull-right"></div>
@@ -296,7 +296,7 @@
         <script src="js/directives/countBy.js"></script>
         <script src="js/directives/databaseConfig.js"></script>
         <script src="js/directives/directedGraph.js"></script>
-        <script src="js/directives/dropData.js"></script>
+        <script src="js/directives/removeDataset.js"></script>
         <script src="js/directives/exportWidgets.js"></script>
         <script src="js/directives/fileFormats.js"></script>
         <script src="js/directives/filterBuilder.js"></script>
