Added ability to disable the import buttons using the config file. They are disabled by default - to enable them, add "'showImport': true" to the "dashboard" section of the config.

--- a/app/index.html
+++ b/app/index.html
@@ -62,8 +62,8 @@
                         <!-- Export option -->
                         <div export-widgets gridster-configs="visualizations" ng-hide="hideNavbarItems"></div>
                         <!-- Import option -->
-                        <div import-file gridster-configs="visualizations" ng-hide="hideNavbarItems"></div>
-                        <div remove-dataset gridster-configs="visualizations" ng-hide="hideNavbarItems"></div>
+                        <div import-file gridster-configs="visualizations" ng-show="showImport"></div>
+                        <div remove-dataset gridster-configs="visualizations" ng-show="showImport"></div>
                     </options-menu>
 
                     <div powered-by-neon class="pull-right"></div>
