Created a sample visualization directive.

--- a/app/index.html
+++ b/app/index.html
@@ -216,6 +216,7 @@
         <script src="js/directives/poweredByNeon.js"></script>
         <script src="js/directives/queryResultsTable.js"></script>
         <script src="js/directives/removeDataset.js"></script>
+        <script src="js/directives/sample.js"></script>
         <script src="js/directives/stackedBarchart.js"></script>
         <script src="js/directives/tagCloud.js"></script>
         <script src="js/time/dateBucketizer.js"></script>
