--- a/app/index.html
+++ b/app/index.html
@@ -212,6 +212,7 @@
         <script src="js/directives/linechart.js"></script>
         <script src="js/directives/linksPopup.js"></script>
         <script src="js/directives/map.js"></script>
+        <script src="js/directives/newsfeed.js"></script>
         <script src="js/directives/optionsMenu.js"></script>
         <script src="js/directives/poweredByNeon.js"></script>
         <script src="js/directives/queryResultsTable.js"></script>
