NEON-1715 Extracted the node and link creation code from the graph directive into the new DirectedGraphMediator.

--- a/app/index.html
+++ b/app/index.html
@@ -183,6 +183,7 @@
         <script src="js/coremap/nodeLayer.js"></script>
         <script src="js/tables/table.js"></script>
         <script src="js/charts/sunburst.js"></script>
+        <script src="js/mediators/directedGraphMediator.js"></script>
 
         <!-- Include our custom Angular components here for now. -->
         <script src="js/app.js"></script>
