--- a/app/index.html
+++ b/app/index.html
@@ -53,9 +53,7 @@
             <div class="navbar-default navbar-fixed-top" ng-class="{true: '', false: 'affix'}[hideNavbarItems == true]">
                 <div class="container" ng-hide="hideNavbarItems">
                     <div class="pull-left" ng-show="hideNavbarItems">
-                        <span class="navbar-text navbar-title-text">
-                            {{navbarTitle}}
-                        </span>
+                        <span class="navbar-text navbar-title-text" ng-bind="navbarTitle"></span>
                     </div>
 
                     <options-menu parent-element="element" id= "navbar-option-menu" class="navbar-text pull-right navbar-option-menu" ng-show="!(hideAdvancedOptions) && (showImport || showExport)">
