NEON-1323 Initial translation service with google

--- a/app/index.html
+++ b/app/index.html
@@ -196,6 +196,7 @@
         <script src="js/filterService.js"></script>
         <script src="js/exportService.js"></script>
         <script src="js/importService.js"></script>
+        <script src="js/translationService.js"></script>
         <script src="js/neonDemoController.js"></script>
 
         <script src="js/charts/circularHeatChart.js"></script>
